unpackaged/main/default/objects/ff_frb__Financial_Statement__c/ff_frb__Financial_Statement__c.object-meta.xml
<CustomObject>
    <description>Stores the configuration for Financial Statements.</description>
    <label>Financial Statement</label>
    <nameField>
        <label>Financial Statement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Statements</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>