unpackaged/main/default/objects/ff_frb__Financial_Statement__c/fields/ff_frb__CompanyFilterConfiguration__c.field-meta.xml
<CustomField>
    <fullName>ff_frb__CompanyFilterConfiguration__c</fullName>
    <description>The configuration for the company filter.</description>
    <label>Company Filter Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>