unpackaged/main/default/objects/ff_frb__Financial_Statement__c/fields/ff_frb__ReportComponentConfiguration__c.field-meta.xml
<CustomField>
    <fullName>ff_frb__ReportComponentConfiguration__c</fullName>
    <description>The general configuration of the component.</description>
    <label>Report Component Configuration</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>