unpackaged/main/default/objects/ff_frb__Financial_Statement__c/recordTypes/ff_frb__Balance_Sheet.recordType-meta.xml
<RecordType>
    <fullName>ff_frb__Balance_Sheet</fullName>
    <active>true</active>
    <description>Used to create a Balance Sheet.</description>
    <label>Balance Sheet</label>
</RecordType>