unpackaged/main/default/objects/ff_frb__Financial_Statement__c/recordTypes/ff_frb__Income_Statement.recordType-meta.xml
<RecordType>
    <fullName>ff_frb__Income_Statement</fullName>
    <active>true</active>
    <description>Used to create an Income Statement.</description>
    <label>Income Statement</label>
</RecordType>