unpackaged/main/default/objects/ff_frb__Financial_Statement__c/recordTypes/ff_frb__Trial_Balance.recordType-meta.xml
<RecordType>
    <fullName>ff_frb__Trial_Balance</fullName>
    <active>true</active>
    <description>Used to create a Trial Balance.</description>
    <label>Trial Balance</label>
</RecordType>