unpackaged/main/default/objects/ff_frb__Financial_Statement__c/listViews/ff_frb__All.listView-meta.xml
<ListView>
    <fullName>ff_frb__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>ff_frb__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>